Wed Apr 24 23:39:00 2002  Irfan Pyarali  <irfan@cs.wustl.edu>

	* examples/Reactor/WFMO_Reactor: Updated file names to match
	  executable names.

Thu Apr 25 07:34:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.h:
          Doxygen-ized some of the comments

Wed Apr 24 18:53:56 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* include/makeinclude/rules.local.GNU (clean.local): Reverted the
	  change "Wed Apr 24 16:08:30 2002  Balachandran Natarajan
	  <bala@cs.wustl.edu>" since it is bogus.

Wed Apr 24 16:08:30 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* include/makeinclude/rules.local.GNU: Added a rule to clean up
	  Sunws_cache properly. Should help SunCC5_1 builds.

Wed Apr 24 11:07:15 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/RMCast/Makefile (FILES): Removed a stray "\".  Thanks to
	  <amir@fats.co.il> for reporting this.  Also reordered the files
	  so they would be in alphabetical order.

Wed Apr 24 11:17:31 2002  Steve Huston  <shuston@riverace.com>

        * PROBLEM-REPORT-FORM: Always ask for config.h and
          platform_macros.GNU; not just on compilation issues.

Wed Apr 24 07:56:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Future_Set.h:
          Converted a comment to javadoc style because it is very long for
          the brief documentation.

        * ace/DEV_IO.h:
        * ace/TTY_IO.h:
          Removed not needed includes

Wed Apr 24 03:14:11 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* tests/MT_Reactor_Upcall_Test.cpp: Fix warnings on threads=0
	build.

Tue Apr 23 16:01:47 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Prevented the Miop/McastHello test from
	  running in SUNCC51 builds. SUNCC51 is too broken. Time to remove
	  the build of the scoreboard.

Tue Apr 23 11:31:43 2002  Ossama Othman  <ossama@uci.edu>

	* ace/Dev_Poll_Reactor.inl (ACE_Dev_Poll_Handler_Guard):
	  (~ACE_Dev_Poll_Handler_Guard):
